# mdb

./: .gitignore  .mdb.appfile  .readthedocs.yaml  CONTRIBUTING.md  COPYRIGHT  LICENSE  README.md  mdb-attach.py  mdb-completion.bash  mdb-launch.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  spack.yaml
.github/workflows/: code-validation.yml  coverage.py  tests.yml
docs/: gen.sh  requirements.txt
docs/source/: click.rst  client-server.rst  conf.py  environment-vars.rst  gdbcheatsheet.rst  gpu-amd.rst  index.rst  installation.rst  mdb-cli.rst  mdb.rst  modules.rst  quick-start.rst  quickstart.rst
examples/: .mdb.conf  Makefile  README.md  saxpy-hip-mpi.cpp  saxpy-mpi.cu  simple-memory.c  simple-mpi-cpp.cpp  simple-mpi-cuda.mdb  simple-mpi-script.mdb  simple-mpi.f90  simple-vgdb-script.mdb
mdb/: README-FB.md  async_client.py  async_connection.py  backend.py  client.py  clientserver.py  debug_client.py  debug_server.py  exchange_server.py  mdb.py  mdb_attach.py  mdb_client.py  mdb_launch.py  mdb_server.py  mdb_shell.py  mdb_wrapper.py  messages.py  server.py  utils.py
mdb/tui/: code_browser.py  code_browser.tcss
src/: mdb-attach.py  mdb-launch.py
src/mdb/: async_client.py  async_connection.py  backend.py  base.py  debug_client.py  exchange_server.py  mdb.py  mdb_attach.py  mdb_client.py  mdb_launch.py  mdb_shell.py  mdb_wrapper.py  messages.py  registry.py  utils.py
tests/: test_integration.py  test_launcher.py  test_utils.py  test_version.py  utils.py
tests/output/: answer-gdb.stdout  answer-lldb.stdout  mdb-attach-log  timeout-log.out
(+9 files in other folders)
