[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdb_debugger"
version = "1.0.5"
dependencies = [
    "click==8.1.7",
    "matplotlib==3.8.3",
    "numpy==1.26.4",
    "pexpect==4.9.0",
    "typing_extensions==4.10.0",
]
requires-python = ">= 3.10"
authors = [
  {name = "Tom Meltzer", email="tdm39@cam.ac.uk" },
]
maintainers = [
  {name = "Tom Meltzer", email="tdm39@cam.ac.uk" },
]
readme = "README.md"
license = { file = "LICENSE" }

[project.scripts]
mdb = "mdb.mdb:run_main"

[project.optional-dependencies]
termgraph = [
    "termgraph==0.5.3",
]
develop = [
    "black==24.3.0",
    "flake8==7.0.0",
    "mypy==1.9.0",
    "types-setuptools==69.2.0.20240317",
    "pytest==8.1.1",
    "pytest-cov==4.1.0",
]
docs = [
    "sphinx",
    "sphinx_click",
    "sphinx_rtd_theme",
]

[project.urls]
Documentation = "https://mdb.readthedocs.io/en/latest/"
Repository = "https://github.com/TomMelt/mdb"
Issues = "https://github.com/TomMelt/mdb/issues"

[tool.isort]
profile = "black"

[tool.pycodestyle]
ignore = ["E203", "E501"]

[tool.mypy]
exclude = ["conf.py"]
strict = true
allow_redefinition = true

[tool.black]
line-length = 88
